2007-11-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, , ext/oci8/apiwrap.c.tmpl,
	  ext/oci8/apiwrap.h.tmpl, ext/oci8/apiwrap.rb,
	  ext/oci8/apiwrap.yml: add new files for non-blocking
	    executions. These use rb_thread_blocking_region in
	    ruby 1.9.
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/stmt.c:
	    use new non-blocking execution API for OCI8#exec and
	    OCI8::CUrsor#fetch.
	* test/test_break.rb: add comment and add sleep to pass
	    test_blocking_mode.

2007-11-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c, test/test_datetime.rb: fix for a change
	   of DateTime#fsec_fractions in ruby 1.9.
	* ext/oci8/stmt.c: rename OCI8::Cursor#__defineByPos to
	   OCI8::Cursor#__define.
	* test/test_oci8.rb: add test_select_number.
	* lib/oci8/oci8.rb: add OCI8::BindType::Base.create which acts as
	   a factory method. move bindtype specific code to create method
	   of OCI8::BindType::Base's subclasses.

2007-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add StatementHandle#column_info.
	   refine DatabaseHandle#columns.
	* test/test_dbi.rb: add a testcase for StatementHandle#column_info
	   and DatabaseHandle#columns.

2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: add OCIError#initialize(msg, code = nil).
	* ext/oci8/metadata.c, lib/oci8/metadata.rb: rename char_semantics
	   method to "char_used?". change the return value of data_type
	   method when the data_type is NCHAR, NVARCHAR2 or NCLOB.
	* test/test_all.rb, test/test_metadata.rb: add a testcase for
	   OCI8::Cursor#column_metadata and OCI8#describe_table.

2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: OCI8::Cursor#fetch_hash accepts a block now.
	* test/test_oci8.rb: add a test for fetch_hash with a block.
	* ext/oci8/metadata.c: fix for 64-bit windows.

2007-11-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/oci8.rb: add OCI8::Cursor#column_metadata.