@@ -9,10 +9,6 @@
 #include <signal.h>
 #endif
 
-#ifdef RUNTIME_API_CHECK
-rboci8_OCIRowidToChar_t rboci8_OCIRowidToChar;
-#endif
-
 oci8_base_class_t oci8_base_class = {
     NULL,
     NULL,
@@ -111,11 +107,7 @@ Init_oci8lib()
     VALUE cOCI8;
 
 #ifdef RUNTIME_API_CHECK
-#ifdef _WIN32
-    rboci8_OCIRowidToChar = (rboci8_OCIRowidToChar_t)GetProcAddress(GetModuleHandle("OCI.DLL"), "OCIRowidToChar");
-#else
-#error RUNTIME_API_CHECK is not supported on this platform.
-#endif
+    Init_oci8_apiwrap();
 #endif
 
     id_oci8_class = rb_intern("__oci8_class__");
